--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
 version=6.2.0-SNAPSHOT
-amf=5.6.0-SNAPSHOT
+amf=5.5.1-RC.2
 amf.custom-validator.js=1.7.2
 amf.custom-validator-scalajs=0.5.10
 amf-antlr-parsers=0.7.25
