--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
-version=6.1.2
-amf=5.5.0-0
+version=6.2.0
+amf=5.5.1
 amf.custom-validator.js=1.7.2
-amf.custom-validator-scalajs=0.5.10
+amf.custom-validator-scalajs=0.5.11
 amf-antlr-parsers=0.7.25
