--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
-version=6.2.0-SNAPSHOT
-amf=5.5.1-RC.2
+version=6.3.0-SNAPSHOT
+amf=5.5.1
 amf.custom-validator.js=1.7.2
-amf.custom-validator-scalajs=0.5.10
+amf.custom-validator-scalajs=0.5.11
 amf-antlr-parsers=0.7.25
