W-15860818: adopt amf 5.5.2 with the changes on binding versions

--- a/als-server/shared/src/test/resources/diagnostics/async26/async-api26-full.yaml
+++ b/als-server/shared/src/test/resources/diagnostics/async26/async-api26-full.yaml
@@ -126,8 +126,8 @@ channels:
               queue:
                 name: CreatedHREvents
                 accessType: exclusive
-                maxMsgSpoolSize: test
-                maxTtl: test
+                maxMsgSpoolSize: 1
+                maxTtl: 1
                 topicSubscriptions:
                   - person/*/created
             -
