--- a/als-actions/js/package.json
+++ b/als-actions/js/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@aml-org/amf-antlr-parsers": "0.7.25",
-    "ajv": "6.12.6"
+    "ajv": "6.12.6",
+    "avro-js": "1.12.0"
   },
   "author": "",
   "license": "ISC"
