--- a/als-server/js/node-package/package.json
+++ b/als-server/js/node-package/package.json
@@ -28,7 +28,8 @@
     "url": "^0.11.0",
     "util": "^0.12.4",
     "vscode-jsonrpc": "6.0.0",
-    "vscode-languageserver-protocol": "3.16.0"
+    "vscode-languageserver-protocol": "3.16.0",
+    "avro-js": "1.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
