--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
-version=6.3.0-SNAPSHOT
+version=6.2.3-INTERNAL-AVRO.0
 amf=5.5.5-INTERNAL-AVRO.3
 amf.custom-validator.js=1.7.2
 amf.custom-validator-scalajs=0.5.5-INTERNAL-AVRO.0
