--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
-version=6.4.0-SNAPSHOT
-amf=5.6.4
+version=6.4.0-java21-SNAPSHOT
+amf=5.7.0-java21-0
 amf.custom-validator.js=1.7.2
 amf.custom-validator-scalajs=0.6.2
 amf-antlr-parsers=0.7.27
