--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
-version=6.4.0-java21-SNAPSHOT
+version=6.4.0-java21-3-SNAPSHOT
 amf=5.7.0-java21-0
 amf.custom-validator.js=1.7.2
 amf.custom-validator-scalajs=0.6.2
