Adopt AMF 5.7.0 with Java 21 Add globalExecutionContext in AlsPlatformSecrets

--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
-version=6.4.0-java21-3-SNAPSHOT
-amf=5.7.0-java21-0
+version=6.4.0-SNAPSHOT
+amf=5.7.0
 amf.custom-validator.js=1.7.2
-amf.custom-validator-scalajs=0.6.2
-amf-antlr-parsers=0.7.27
+amf.custom-validator-scalajs=0.7.0
+amf-antlr-parsers=0.8.28
