--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,4 +1,4 @@
-version=7.1.0-SNAPSHOT
+version=7.1.0-MULTI-PROJECT-SNAPSHOT
 amf=5.7.0
 amf.custom-validator.js=1.7.2
 amf.custom-validator-scalajs=0.7.0
