W-18509097: Add basic ANTLR structure completion support for protobuf3 based on grammar

--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
-version=7.1.0-SNAPSHOT
-amf=5.7.0
+version=7.1.0-PROTO-SNAPSHOT.1
+amf=5.8.0-ALS-SNAPSHOT
 amf.custom-validator.js=1.7.2
 amf.custom-validator-scalajs=0.7.0
 amf-antlr-parsers=0.8.0-ALS-SNAPSHOT
