add MCP config for tests

--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,5 +1,5 @@
 version=7.1.0-SNAPSHOT
-amf=5.7.1
+amf=5.8.0-SNAPSHOT
 amf.custom-validator.js=1.7.5
 amf.custom-validator-scalajs=0.7.1
 amf-antlr-parsers=0.8.28
